--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-document-picker": "^9.3.0",
