--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-document-picker": "^9.3.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^3.15.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
