--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-signature-canvas": "^4.7.2",
     "react-native-svg": "^7.2.1",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "^13.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
