--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-calendars": "^1.1306.0",
